RESOLVED FIXED105165
[Texmap] Drawing of ARB textures broken after r137498.
https://bugs.webkit.org/show_bug.cgi?id=105165
Summary [Texmap] Drawing of ARB textures broken after r137498.
Zeno Albisser
Reported 2012-12-17 05:35:53 PST
[Texmap] Drawing of ARB textures broken after r137498.
Attachments
Patch (2.32 KB, patch)
2012-12-17 05:39 PST, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2012-12-17 05:39:55 PST
Zeno Albisser
Comment 2 2012-12-17 06:02:44 PST
Comment on attachment 179722 [details] Patch Clearing flags on attachment: 179722 Committed r137901: <http://trac.webkit.org/changeset/137901>
Zeno Albisser
Comment 3 2012-12-17 06:02:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.