[Texmap] Drawing of ARB textures broken after r137498. https://bugs.webkit.org/show_bug.cgi?id=105165

Disable antialiasing for ARB textures after unifying
code paths. We are currently missing a fragment shader
to do antialiasing with ARB textures.

Reviewed by Kenneth Rohde Christiansen.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::drawTexture):

Canonical link: https://commits.webkit.org/123414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137901 268f45cc-cd09-0410-ab3c-d52691b4dbfc